[gd_scene load_steps=4 format=2]

[ext_resource path="res://art/frame1.png" type="Texture" id=1]
[ext_resource path="res://missle.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.46
height = 23.5099

[node name="missle" type="RigidBody2D"]
collision_layer = 2
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 10.4882, 3.05176e-05 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="hitBocx" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBocx"]
position = Vector2( 10.4882, 3.05176e-05 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="deathTimer" type="Timer" parent="."]

[connection signal="area_entered" from="hitBocx" to="." method="_on_hitBocx_area_entered"]
[connection signal="timeout" from="deathTimer" to="." method="_on_deathTimer_timeout"]
